# general_insurance_claim_model

./: Example of Use.ipynb  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish_to_pypi.yml  publish_to_test_pypi.yml  test_build.yml
general_insurance_data_model/: triangles.py
